tests/sumo/errors/too_many_teleports/errors.sumo.meso
Warning: Teleporting vehicle 'always_right.20'; waited too long, from edge '4o':3, time 676.51.
Warning: Vehicle 'always_right.20' ends teleporting on edge '4si':0, time 721.51.
Warning: Teleporting vehicle 'always_right.21'; waited too long, from edge '4o':3, time 978.09.
Warning: Vehicle 'always_right.21' ends teleporting on edge '4si':0, time 1023.09.
Warning: Teleporting vehicle 'always_right.42'; waited too long, from edge '4o':3, time 1895.81.
Warning: Vehicle 'always_right.42' ends teleporting on edge '4si':0, time 1940.82.
Warning: Teleporting vehicle 'always_right.63'; waited too long, from edge '4o':3, time 3010.19.
Warning: Vehicle 'always_right.63' ends teleporting on edge '4si':0, time 3055.20.
Warning: Teleporting vehicle 'always_right.54'; waited too long, from edge '1o':4, time 4078.43.
Warning: Vehicle 'always_right.54' teleports beyond arrival edge '1fi', time 4123.43.
Warning: Teleporting vehicle 'always_right.84'; waited too long, from edge '4o':3, time 4079.69.
